<resources>
    <string name="app_name">Sky</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_screen">Alarm Screen</string>
    <string name="home_screen">Home Screen</string>
    <string name="settings_screen">Settings Screen</string>
    <string name="favourite_screen">Favourite Screen</string>
    <string name="google_map_screen">Google Map Screen</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="alarm">Alarms</string>
    <string name="unknown">Unknown</string>
    <string name="default_temp">No°C</string>
    <string name="default_lat">30.0444</string>
    <string name="default_lon">31.2357</string>
    <string name="lon">lon</string>
    <string name="lat">lat</string>
    <string name="name">name</string>
    <string name="wrong_data_submitted">Wrong data submitted</string>
    <string name="weather_status_image">Weather status image</string>
    <string name="temperature_placeholder">%d°</string>
    <string name="ThreeLetters">APC</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="submit">Submit</string>
    <string name="location">Location</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="pls_turn_on_location">Please turn on Location</string>
    <string name="this_location_does_not_contain_data">"This Location doesn't contain data for Weather!"</string>
    <string name="google_map_api_key">AIzaSyCzesjn7dhhrCJ5CoLw9IMmLZ7dyA3TEkQ</string>
    <string name="add_fav_locatoin">Add fav location</string>

    <!-- Preference Keys -->
    <string name="language_key">language_key</string>
    <string name="temp_unit_key">temp_unit_key</string>
    <string name="speed_unit_key">speed_unit_key</string>
    <string name="location_key">location_key</string>
    <string name="notification_key">notification_key</string>
    <!-- Preference Titles -->
    <string name="weather">Messages</string>
    <string name="app_settings">App Settings</string>
    <string name="weather_settings">Weather Settings</string>
    <string name="notification">Notification</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="allow_notifications">Allow app to send notifications</string>
    <string name="notification_allowed">Notification Allowed</string>

    <!-- Preference Messages -->
    <string name="language">Language</string>
    <string name="ar">عربى</string>
    <string name="en">English</string>
    <string name="ar_key">ar</string>
    <string name="en_key">en</string>


    <string name="temp_unit">Temperature Unit</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>

    <string name="celsius_key">celsius_key</string>
    <string name="fahrenheit_key">fahrenheit_key</string>
    <string name="kelvin_key">kelvin_key</string>

    <string name="speed_unit">Speed Unit</string>
    <string name="meter_second">meter/sec</string>
    <string name="miles_hour">miles/hour</string>

    <string name="meter_second_key">meter_second_key</string>
    <string name="miles_hour_key">miles_hour_key</string>

    <string name="gps_key">gps_key</string>
    <string name="map_key">map_key</string>
    <string name="add">Add</string>
    <string name="menu_map_option">Menu Map Options</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>


</resources>