<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginBottom="50dp"
    android:background="@color/eastBay40p">

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGpsOrMap" />

    <ImageView
        android:id="@+id/dialogIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/gps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/light_foggy" />

    <TextView
        android:id="@+id/txtVInitialSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/initial_setup"
        android:textColor="@color/eastBay"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dialogIcon"
        app:layout_constraintStart_toEndOf="@+id/dialogIcon"
        app:layout_constraintTop_toTopOf="@+id/dialogIcon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/location"
        android:textColor="@color/eastBay"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/dialogIcon"
        app:layout_constraintTop_toBottomOf="@+id/dialogIcon" />

    <RadioGroup
        android:id="@+id/rgGpsOrMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:checked="true"
            android:text="@string/gps"
            android:textColor="@color/eastBay"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioOpenMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"

            android:textColor="@color/eastBay"
            android:textStyle="bold" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
