<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeAndRefresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_img"
    tools:context=".fav_locatoin_details_screen.FavLocationDetailsScreen">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHomeScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtVLocationName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="80dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtVTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="96sp"
                app:layout_constraintEnd_toEndOf="@+id/txtVLocationName"
                app:layout_constraintStart_toStartOf="@+id/txtVLocationName"
                app:layout_constraintTop_toBottomOf="@+id/txtVLocationName" />

            <TextView
                android:id="@+id/txtVWeatherStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txtVTemperature"
                app:layout_constraintStart_toStartOf="@+id/txtVTemperature"
                app:layout_constraintTop_toBottomOf="@+id/txtVTemperature" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHourlyWeather"
                android:layout_width="0dp"
                android:layout_height="203dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgWeatherStatus" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationLoading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/eastBay40p"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/weather_loading"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="114dp" />

            <ImageView
                android:id="@+id/imgWeatherStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/weather_status_image"
                android:src="@drawable/light_foggy"
                app:layout_constraintEnd_toEndOf="@+id/txtVTemperature"
                app:layout_constraintStart_toStartOf="@+id/txtVTemperature"
                app:layout_constraintTop_toBottomOf="@+id/txtVWeatherStatus" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDaysWeather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvHourlyWeather" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewWeatherAttributes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="80dp"
                android:visibility="gone"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvDaysWeather">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/hourly_weather_gradient_background">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/attribute_pressure"
                        app:layout_constraintEnd_toStartOf="@+id/imageView10"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/attribute_clouds"
                        app:layout_constraintEnd_toEndOf="@+id/imageView5"
                        app:layout_constraintStart_toStartOf="@+id/imageView5"
                        app:layout_constraintTop_toBottomOf="@+id/txtVPressure" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/attribute_wind_speed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageView10"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/attribute_humidity"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                        app:layout_constraintEnd_toEndOf="@+id/txtVWindSpeed"
                        app:layout_constraintStart_toStartOf="@+id/txtVWindSpeed"
                        app:layout_constraintTop_toTopOf="@+id/imageView11" />

                    <TextView
                        android:id="@+id/txtVPressureValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imageView5"
                        app:layout_constraintStart_toStartOf="@+id/imageView5"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                    <TextView
                        android:id="@+id/txtVPressure"
                        android:layout_width="57dp"
                        android:layout_height="19dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imageView5"
                        app:layout_constraintStart_toStartOf="@+id/imageView5"
                        app:layout_constraintTop_toBottomOf="@+id/txtVPressureValue" />

                    <TextView
                        android:id="@+id/txtVCloudsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imageView7"
                        app:layout_constraintStart_toStartOf="@+id/imageView7"
                        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

                    <TextView
                        android:id="@+id/txtVClouds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/clouds"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/txtVCloudsValue"
                        app:layout_constraintStart_toStartOf="@+id/txtVCloudsValue"
                        app:layout_constraintTop_toBottomOf="@+id/txtVCloudsValue" />

                    <TextView
                        android:id="@+id/txtVWindSpeedValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imageView8"
                        app:layout_constraintStart_toStartOf="@+id/imageView8"
                        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

                    <TextView
                        android:id="@+id/txtVWindSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/wind_speed"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/txtVWindSpeedValue"
                        app:layout_constraintStart_toStartOf="@+id/txtVWindSpeedValue"
                        app:layout_constraintTop_toBottomOf="@+id/txtVWindSpeedValue" />

                    <TextView
                        android:id="@+id/txtVHumidityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imageView9"
                        app:layout_constraintStart_toStartOf="@+id/imageView9"
                        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

                    <TextView
                        android:id="@+id/txtHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/txtVHumidityValue"
                        app:layout_constraintStart_toStartOf="@+id/txtVHumidityValue"
                        app:layout_constraintTop_toBottomOf="@+id/txtVHumidityValue" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="60dp"
                        android:src="@drawable/attribute_visibility"
                        app:layout_constraintEnd_toStartOf="@+id/imageView8"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtVVisibilityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imageView10"
                        app:layout_constraintStart_toStartOf="@+id/imageView10"
                        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

                    <TextView
                        android:id="@+id/txtVVisibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/visibility"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imageView10"
                        app:layout_constraintStart_toStartOf="@+id/imageView10"
                        app:layout_constraintTop_toBottomOf="@+id/txtVVisibilityValue" />

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/attribute_ultra_violet"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintEnd_toEndOf="@+id/imageView10"
                        app:layout_constraintStart_toStartOf="@+id/imageView10"
                        app:layout_constraintTop_toTopOf="@+id/imageView7" />

                    <TextView
                        android:id="@+id/txtVUltraVioletValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imageView11"
                        app:layout_constraintStart_toStartOf="@+id/imageView11"
                        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

                    <TextView
                        android:id="@+id/txtVUltraViolet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/ultra_violet"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imageView11"
                        app:layout_constraintStart_toStartOf="@+id/imageView11"
                        app:layout_constraintTop_toBottomOf="@+id/txtVUltraVioletValue" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>